includes/css/styles.css
/* ... */
#day .minical td.selectedday {
  border:.125rem solid var(--tablebg);
}
#day .monthnav th {
  border:0;
  padding:.1875rem;
  text-align:center;
}
.menuhref {
  font-family:arial, verdana, sans-serif;
}
#datesel td.field {
  font-size:.75rem;
}
.glance {
  width:100%;
  border-right:1px solid var(--tablebg);
  border-bottom:1px solid var(--tablebg);
}
.glance th.empty {
  background-color: var(--bgcolor) !important;
  border-top:1px solid var(--bgcolor) !important;
  border-left:1px solid var(--bgcolor) !important;
}
.glance th.row {
  width:14%;
  height:2.5rem;
  border-top:1px solid var(--tablebg);
  border-left:1px solid var(--tablebg);
  vertical-align:middle;
}
.glance td {
  border-top:1px solid var(--tablebg);
  border-left:1px solid var(--tablebg);
  padding-left:.1875rem;
  vertical-align:top;
}
#day .glance td {
  width:86%;
  height:2.5rem;
}
#day dl.desc {
  margin:0;
  padding:0;
}
#day dl.desc dt {
  font-weight:bold;
}
#day dl.desc dd {
  margin:0;
  padding-left:1.25rem;
}
#year #monthgrid td {
  padding:0 .3125rem;
  vertical-align:top;
}
#year .minical tr {
  vertical-align:top;
}
#pref .main th,
#viewv .main th,
#viewl .main th,
#month .main th {
  width:14%;
}
#vieww .main th,
#week .main th {
  width:12%;
}
#viewr th.small {
  background-color:none;
  font-size:.5rem;
}
#viewd .main th {
  border-right:1px solid var(--tablebg);;
  padding:.0625rem;
}
#day .main th.empty,
#month .main th.empty,
#pref .main th.weekcell,
#viewl .main th.empty {
  width:1%;
  border-top:0;
  border-left:0;
  background-color:transparent !important;
}
#month .main td.weekcell,
#pref .main td.weekcell,
#viewl .main td.weekcell {
  width:1%;
  color: var(--h2color);
  margin:0;
  font-size:.75rem;
  text-align:center;
  text-decoration:none;
  vertical-align:middle;
}
#pref .main td.empty,
#pref .main th.empty {
  width:1%;
  border-top-color:transparent !important;
  border-left-color:transparent !important;
}
#pref .main td.weekcell,
#pref .main th.weekcell {
  width:1%;
}
#viewv .main th.empty,
#viewm .main th.empty,
#vieww .main th.empty,
#viewr .main th.empty,
#week .main th.empty {
  width:5%;
  border-top:1px solid var(--bgcolor) !important;
  border-left:1px solid var(--bgcolor) !important;
  background-color:transparent !important;
  background: none;
}
#week .main th.row {
  width:5%;
  height:2.5rem;
  vertical-align:top;
}
#viewt.main {
  margin:0;
  padding:0;
}
#vieww .main th.row,
#viewv .main th.row,
#viewm .main th.row,
#viewt .main th {
  width:10%;
  vertical-align:top;
}
#viewv .main th.row {
  padding:0 .3125rem;
  text-align:left;
}
#viewd .main th.row {
  border-right-width:0;
  text-align:left;
}
#viewr th.row {
  height:2.5rem;
  vertical-align:top;
}
#vieww .main th.today,
#viewm .main th.today,
#viewv .main th.today {
  width:10%;
}
#pref .main th.today,
#viewr .main th.today,
#week .main th.today {
  width:14%;
}
#year .minical td {
  text-align:center;
  vertical-align:top;
}
#pref .main td {
  height:1.875rem;
  font-size:.75rem;
}
#viewl .main td,
#contentMonth .main td,
#month .main td {
  height:6.0rem;
  font-size:.75rem;
  vertical-align:top;
}
#vieww .main td,
#week .main td,
#viewr .main td,
#viewm .main td,
#viewv .main td {
  font-size:.75rem;
  padding-left:.1875rem;
}
#viewl #prevmonth {
  float:left;
}
#viewl #nextmonth {
  float:right;
}
#month .minical caption,
#viewl .minical caption {
  margin-left:4ex;
}
#year .minical {
  display:block;
}
#year .minical caption {
  margin:0 auto;
}
#viewl .minical,
#month .minical {
  margin:0 .25rem;
  border:0;
}
#combo div.headerinfo, #month2 div.headerinfo {
  margin:.9375rem;
  border:1px solid #000;
  padding:.625rem;
  background-color:#FFF;
  color:#000;
}
#combo div.headerinfo .username, #month2 div.headerinfo .username {
  font-weight:bold;
  font-size:16pt;
}
#combo div.headerinfo #categoryselection, #month2 div.headerinfo #categoryselection {
  padding-left:1.875rem;
  font-weight:normal;
  font-size:12pt;
}
#combo div.headerinfo #selectedcategories, #month2 div.headerinfo #selectedcategories {
  font-weight:normal;
  font-size:12pt;
}
#combo #categorylist, #month2 #categorylist {
  border:1px solid #CCC;
  background-color:#FFA;
}
#contentMonth #monthstatus {
  margin-left:1.25rem;
}
#month2 td.displayYear { font-size: 1.2rem !important; }
#contentMonth .monthtitle,
#contentYear .yeartitle,
#contentDay .daytitle {
  margin:0 0 0 .3125rem;
  padding:0;
  font-size:18pt;
  text-align:center;
}
#combo #contentMonth #month_main, #month2 #contentMonth #month_main {
  margin-top: 10px;
}
#combo #contentMonth #month_main td, #month2 #contentMonth #month_main td {
  height:90px;
}
#combo .event, #month2 .event {
  margin-top:.0625rem;
  overflow:hidden;
}
#combo #contentMonth .eventname, #month2 #contentMonth .eventname {
  vertical-align: top;
}
#combo #contentMonth .event, #month2 #contentMonth .event {
  vertical-align: middle;
}
#contentYear #year_main,
#contentYear .monthblock {
  background-color: #FFF;
  border: 0;
}
#contentYear .monthtable {
  margin-bottom: 10px;
  border-right: 1px solid;
  border-bottom: 1px solid;
}
#contentYear .empty {
  background-color: #E0E0E0;
}
#contentYear th {
  font-size: 70%;
  padding: 2px;
}
#contentYear .dom {
  font-size: 70%;
  text-align: center;
}
#contentAgenda #agendastatus {
  margin-left:1.25rem;
}
#contentAgenda td {
  background-color:#E0E0E0;
  font-size:10pt;
}
#contentAgenda td.even {
  background-color:#FFFFFF;
}
#contentDay #daystatus {
  margin-left:1.25rem;
}
#contentDay .timeofday {
  float:right;
  margin-right:.125rem;
  font-size:.5625rem;
}
#contentDay #daydiv {
  height:25rem;
  scrollTop:400;
  overflow:auto;
}
#contentDay #dayuntimed {
  background-color:#FFFFFF;
  color: var(--myevents);
  margin-top:.25rem;
  margin-bottom:.25rem;
  margin-left:3.125rem;
  border:1px solid;
  border-color:#A0A0A0 #E0E0E0 #E0E0E0 #A0A0A0;
  font-size:.625rem;
}
/* ... */

